fix layout bug in small phones and with use of screen keyboard

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,8 +16,9 @@ body {
 
 #content {
   position: relative;
-  height: 100%;
-  width: 100%;
+  min-height: 600px;
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
 
   font-family: 'Montserrat', sans-serif;
@@ -45,9 +46,6 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-
-  display: grid;
-  grid-template-rows: 25% auto 25%;
 }
 
 header,
